--- a/css/bootstrap-4.4.1.css
+++ b/css/bootstrap-4.4.1.css
@@ -5243,7 +5243,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: wheat;
+  background-color: white;
   border-radius: 0.3rem;
 }
 
@@ -6753,7 +6753,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: white !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
